--- a/assets/main.css
+++ b/assets/main.css
@@ -8,3 +8,42 @@
     background-color: red;
     width: 100%;
 }
+
+body {
+    font-family: sans-serif;
+    margin: 0;
+    background: #212125;
+    color: #e6e8db;
+}
+h1 {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    margin-top: -130px;
+    opacity: .9;
+    letter-spacing: 2px;
+}
+
+a {
+    position: absolute;
+    top: 30px;
+    left: 60px;
+    color: #777;
+    text-decoration: none;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: none;
+}
+
+.container {
+    background: linear-gradient(left, #00BBFF, #00BBFF 14.3%, #2EB5E5 14.3%, #2EB5E5 28.6%, #E6E6E6 28.6%, #E6E6E6 42.9%, #F3D166 42.9%, #F3D166 57.2%, #222233 57.2%, #222233 71.5%, #444444 71.5%, #444444 85.8%, #85DB8C 85.8%);
+    transform: scale(.9);
+    width: 1200px;
+    position: absolute;
+    height: 210px;
+    left: 50%;
+    top: 30%;
+    margin: -65px -600px;
+}
