--- a/assets/main.css
+++ b/assets/main.css
@@ -52,6 +52,7 @@ h1 {
     margin: auto;
     width: fit-content;
     padding: 30px;
+    text-decoration: none;
 }
 .button{
     background-color: white;
@@ -59,4 +60,12 @@ h1 {
     padding: 5px 8px;
     border-radius: 8px;
     margin-left: 15px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    cursor: pointer;
 }
