--- a/assets/main.css
+++ b/assets/main.css
@@ -25,18 +25,6 @@ h1 {
     letter-spacing: 2px;
 }
 
-a {
-    position: absolute;
-    top: 30px;
-    left: 60px;
-    color: #777;
-    text-decoration: none;
-    font-size: 11px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    display: none;
-}
-
 .container {
     background: linear-gradient(left, #00BBFF, #00BBFF 14.3%, #2EB5E5 14.3%, #2EB5E5 28.6%, #E6E6E6 28.6%, #E6E6E6 42.9%, #F3D166 42.9%, #F3D166 57.2%, #222233 57.2%, #222233 71.5%, #444444 71.5%, #444444 85.8%, #85DB8C 85.8%);
     transform: scale(.9);
@@ -46,4 +34,42 @@ a {
     left: 50%;
     top: 30%;
     margin: -65px -600px;
+}
+
+.menu{
+    display: block;
+    margin: auto;
+    width: fit-content;
+    padding: 30px;
+    text-decoration: none;
+}
+.button{
+    background-color: white;
+    color: red;
+    padding: 5px 8px;
+    border-radius: 8px;
+    margin-left: 15px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    cursor: pointer;
+}
+
+.description{
+    display: flex;
+    margin: auto;
+    width: fit-content;
+    padding: 30px;
+}
+
+
+#uploader{
+    display: flex;
+    margin: auto;
+    width: fit-content;
+    padding: 70px;
 }
